#6140 Fix creator page title gaps and color - padding in collapsed state Fixes #6140

--- a/packages/survey-creator-core/src/components/page.scss
+++ b/packages/survey-creator-core/src/components/page.scss
@@ -435,6 +435,10 @@ svc-page {
   & > .sv-action-bar {
     display: none;
   }
+  
+  .sd-page__title {
+    margin-bottom: 0;
+  }
 
   .svc-page__placeholder_frame {
     display: none;
